2013-06-28  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid inadvertent overwrite of existing files.

	* src/mkpath.c (_O_NEWFILE): Conditionally specify attributes...
	[IMPLEMENTATION_LEVEL == SETUP_TOOL_COMPONENT]: ...as they were...
	[IMPLEMENTATION_LEVEL != SETUP_TOOL_COMPONENT]: ...else, include
	_O_EXCL in the specified set; exclude _O_TRUNC.

	* src/tarproc.cpp (dmh_notify_extraction_failed): New static inline
	function; it encapsulates the diagnostic message factored out from...
	(pkgArchiveProcessor::ExtractFile): ...here, whence use it.
	(create_output_stream): Also used in this new static inline function;
	it adds an appropriate diagnostic wrapper around set_output_stream(),
	when _O_EXCL prevents overwrite of an existing file.
	(pkgArchiveProcessor::SetOutputStream): Use it.

2013-06-27  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Improve diagnostics for tar archive processing faults.

	* src/pkgproc.h (TAR_ARCHIVE_FORMAT_ERROR): New constant; define it.
	(TAR_ARCHIVE_DATA_READ_ERROR, TAR_ARCHIVE_DATA_WRITE_ERROR): Likewise.

	* src/tarproc.cpp (dmh_notify_archive_data_exhausted): New static
	inline function; implement it.
	(pkgTarArchiveProcessor::GetArchiveEntry) [short header]: Use it.
	(pkgArchiveProcessor::ExtractFile) [TAR_ARCHIVE_DATA_READ_ERROR]:
	Likewise, use it here; also explicitlycheck for, and diagnose...
	[TAR_ARCHIVE_DATA_WRITE_ERROR]: ...this; also add a further catch all
	case, to diagnose any other unexpected condition.
	(pkgTarArchiveProcessor::GetArchiveEntry) [bad checksum]: Diagnose it.
	(pkgTarArchiveProcessor::Process): Return appropriate status codes.
	(pkgTarArchiveProcessor::ProcessEntityData): Likewise.

2013-06-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Facilitate version synchronisation for mingw-get-setup.

	* VERSION.m4: New file.
	* configure.ac: Include it, and...
	(AC_INIT): ...use it.

2013-06-21  Keith Marshall  <keithmarshall@users.sourceforge.net>
